## Process this file with automake to produce Makefile.in

TESTS = testORIG testFILL testEND testNOP testTRAP testHALT testADD testXOR testAND testJMP testRET testJSR testBR testBRP testBRN
check_PROGRAMS = testORIG testFILL testEND testNOP testTRAP testHALT testADD testXOR testAND testJMP testRET testJSR testBR testBRP testBRN

# Run tests for encoding ORIG 
testORIG_SOURCES = testORIG.c $(top_builddir)/src/Lc3b-Assembler.h
testORIG_CFLAGS = @CHECK_CFLAGS@
testORIG_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding FILL
testFILL_SOURCES = testFILL.c $(top_builddir)/src/Lc3b-Assembler.h
testFILL_CFLAGS = @CHECK_CFLAGS@
testFILL_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding END
testEND_SOURCES = testEND.c $(top_builddir)/src/Lc3b-Assembler.h
testEND_CFLAGS = @CHECK_CFLAGS@
testEND_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding NOP
testNOP_SOURCES = testNOP.c $(top_builddir)/src/Lc3b-Assembler.h
testNOP_CFLAGS = @CHECK_CFLAGS@
testNOP_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding TRAP
testTRAP_SOURCES = testTRAP.c $(top_builddir)/src/Lc3b-Assembler.h
testTRAP_CFLAGS = @CHECK_CFLAGS@
testTRAP_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding HALT
testHALT_SOURCES = testHALT.c $(top_builddir)/src/Lc3b-Assembler.h
testHALT_CFLAGS = @CHECK_CFLAGS@
testHALT_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding ADD
testADD_SOURCES = testADD.c $(top_builddir)/src/Lc3b-Assembler.h
testADD_CFLAGS = @CHECK_CFLAGS@
testADD_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding XOR
testXOR_SOURCES = testXOR.c $(top_builddir)/src/Lc3b-Assembler.h
testXOR_CFLAGS = @CHECK_CFLAGS@
testXOR_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding AND
testAND_SOURCES = testAND.c $(top_builddir)/src/Lc3b-Assembler.h
testAND_CFLAGS = @CHECK_CFLAGS@
testAND_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding JMP
testJMP_SOURCES = testJMP.c $(top_builddir)/src/Lc3b-Assembler.h
testJMP_CFLAGS = @CHECK_CFLAGS@
testJMP_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding JMP
testRET_SOURCES = testRET.c $(top_builddir)/src/Lc3b-Assembler.h
testRET_CFLAGS = @CHECK_CFLAGS@
testRET_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding JSR
testJSR_SOURCES = testJSR.c $(top_builddir)/src/Lc3b-Assembler.h
testJSR_CFLAGS = @CHECK_CFLAGS@
testJSR_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding BR
testBR_SOURCES = testBR.c $(top_builddir)/src/Lc3b-Assembler.h
testBR_CFLAGS = @CHECK_CFLAGS@
testBR_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding BRN
testBRN_SOURCES = testBRN.c $(top_builddir)/src/Lc3b-Assembler.h
testBRN_CFLAGS = @CHECK_CFLAGS@
testBRN_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@

# Run tests for encoding BRP
testBRP_SOURCES = testBRP.c $(top_builddir)/src/Lc3b-Assembler.h
testBRP_CFLAGS = @CHECK_CFLAGS@
testBRP_LDADD = $(top_builddir)/src/libAssembler.la @CHECK_LIBS@
